# cpp-google-style-skill

./: LICENSE  README.md  SKILL.md
examples/: CMakeLists.txt  url_table.cc  url_table.h
references/: 01-formatting-and-naming.md  02-headers-and-scoping.md  03-classes-and-functions.md  04-restrictions-and-modern-cpp.md  05-comments-and-exceptions.md
